--- a/index.html
+++ b/index.html
@@ -2,24 +2,47 @@
 <html lang="fr">
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
-	<title>Dice Game</title>
+	<title>Document</title>
 </head>
 <body>
-	<header>
-		<h1>WELCOME</h1>
+	<div class="page">
+	<header class="head">
+		<h1>WELCOME TO THE DICE GAME</h1>
 	</header>
-	<main>
-		<div class="players">
-			<div class="player1">Player 1</div>
-			<div class="player2">Player 2</div>
-			<!-- /.player2 -->
-			<div class="button">
-				<button class="btn1">GO</button>
-				<button class="btn2">GO</button>
-			</div>
+
+	<div class="resetGame">
+	<button class="butnGame">NEW GAME</button>
+	</div>
+	
+	<div class="newGame">
+		<button class="reset">RESET</button>
 		</div>
-	</main>
+		
+		<div class="dice">
+			<img src="dice.svg" alt="d">
+		</div>
+	
+		<div class="container">
+			
+		<div class="player">PLAYER 1
+			<div>
+				<button class="goButton">GO</button>
+			</div>
+			<div class="result"></div>
+			
+		</div>
+		
+		<div class="player">PLAYER 2
+			<div>
+				<button class="goButton">GO</button>
+			</div>
+			<div class="result"></div>
+		</div>
+		
+	</div>
+	</div>
 </body>
 </html>
